fix: fix overflow at column

--- a/src/components/Board/board.scss
+++ b/src/components/Board/board.scss
@@ -25,7 +25,6 @@
     padding: 15px;
     box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%);
     margin: 0 8px;
-    overflow-y: auto;
 
     &__title {
       width: 100%;
